--- a/index.html
+++ b/index.html
@@ -2,20 +2,20 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="theme-color" content="#8249af">
+    <meta name="theme-color" content="#181a1b">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <link rel="icon" type="image/png" href="assets/images/gold.png" />
-        <meta property="og:image" content="https://cdn.discordapp.com/attachments/668129077802172417/668136514110095370/gold.png">
-        <title>perssBest</title>
-      	<meta property="og:title" content="люблю секс❤️">
-        <meta property="og:description" content="ауф">
+        <link rel="icon" type="image/png" href="https://media.discordapp.net/attachments/702056926137155624/740150905575309322/84489078ef87e670.jpg" />
+        <meta property="og:image" content="https://media.discordapp.net/attachments/702056926137155624/740150905575309322/84489078ef87e670.jpg">
+        <title>perssBest - Github</title>
+      	<meta property="og:title" content="">
+        <meta property="og:description" content="Главная страница моего Github аккаунта :D">
       	<meta property="og:url" content="https://iredoff.github.io">
-        <meta name="description" content="параша">
+        <meta name="description" content="">
 
         <link rel="stylesheet" href="styles.css">
 
@@ -23,7 +23,7 @@
 
     <body>
         <div class="box">
-            <h1 class="glitch">iredoff</h1>
+            <a href="https://github.com/perssBest"><h1 class="glitch">iredoff</h1></a>
          </div>
     </body>
 </html>
