--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <body>
         <div class="box">
-            <a href="https://github.com/perssBest"><h1 class="glitch">iredoff</h1></a>
+            <a href="https://github.com/perssBest" class="text"><h1 class="glitch">iredoff</h1></a>
          </div>
     </body>
 </html>
